examples/test/testpolicy10518.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10518
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key37: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value46
          key6: value22
      podSelector:
        matchLabels:
          key4: value0
          key3: value23
